fix(styles): fix focus ring clipping on form elements inside form dialog body

--- a/packages/styles/src/components/dialog.scss
+++ b/packages/styles/src/components/dialog.scss
@@ -8,6 +8,7 @@
 
 @use '../functions/tokens';
 @use '../tokens/utilities';
+@use '../tokens/helpers';
 @use '../mixins/media';
 @use '../mixins/color-scheme';
 
@@ -139,6 +140,15 @@ dialog {
     grid-area: body;
     margin-bottom: 0;
     overflow: auto;
+
+    // prevent overflow: auto from clipping focus rings of child elements
+    $focus-space: calc(
+      #{tokens.get('focus-outline-offset', helpers.$post-focus)} +
+      #{tokens.get('focus-outline-width', helpers.$post-focus)}
+    );
+
+    padding: $focus-space;
+    margin: calc(-1 * #{$focus-space});
 
     > *:last-child {
       margin-bottom: 0;
